// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table tests Should not show the data when 1`] = `
<div>
  <table
    class="table table-sm table-striped table-bordered table-hover"
  >
    <thead>
      <tr>
        <th>
          File Name
        </th>
        <th>
          Text
        </th>
        <th>
          Number
        </th>
        <th>
          Hex
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          class="text-center"
          colspan="4"
        >
          There is no data!!!
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table tests Should render correctly 1`] = `
<div>
  <table
    class="table table-sm table-striped table-bordered table-hover"
  >
    <thead>
      <tr>
        <th>
          File Name
        </th>
        <th>
          Text
        </th>
        <th>
          Number
        </th>
        <th>
          Hex
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          test2.csv
        </td>
        <td>
          vYISIpKVaG
        </td>
        <td>
          47661943
        </td>
        <td>
          9999aae84d12a16846387e793eb4436c
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
